Added more content

--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <title>Dictionary App</title>
 </head>
 <body>
    <form>
     <input type="text" name="entity" id="entity" placeholder="Enter your search text here......">
    <input type="submit" value="Search">
-</form> 
+</form>
+<script src="Script/main.js"></script> 
 </body>
 </html>
