Added more content

--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,13 @@
     <title>Dictionary App</title>
 </head>
 <body>
-   <form>
+    <div class="main">
+         <form>
     <input type="text" name="entity" id="entity" placeholder="Enter your search text here......">
    <input type="submit" value="Search">
 </form>
+    </div>
+  
 <script src="Script/main.js"></script> 
 </body>
 </html>
